<resources>
    <string name="app_name">Programmeerproject</string>
    <string name="email">example@example.com</string>
    <string name="pass">Password</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signUpHint">Please fill in in the adress to search from. (Can be changed later)</string>
    <string name="street">Street</string>
    <string name="number">House Number</string>
    <string name="city">City</string>
    <string name="logInDetailHint">Please fill in an email and password to log in with.</string>
    <string name="next">Next</string>
    <string name="nameHint">Please fill in your name. (This name will be seen by others)</string>
    <string name="sportHint">Please choose a sport and your level to search for similar users.</string>
    <string name="createProf">Create profile</string>
    <string name="logOut">Log Out</string>
    <string name="welcome">Welcome </string>
    <string name="sport">Sport:</string>
    <string name="level">Level:</string>
    <string name="radiusHint">Please fill in the radius in kilometers which determines in what radius around your adress the app tries to find users.</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="find">Find</string>
    <string name="chats">Chats</string>
    <string name="schemes">Schemes</string>
    <string name="searchAgain">Search Again</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="genderAgeHint">Please choose your gender and fill in your age.</string>
    <string name="age">Age</string>
    <string name="descHint">Please fill in additional information. (For example the name of your gym)</string>
    <string name="gender">Gender: </string>
    <string name="desc">Description: </string>
    <string name="editPers">Edit Personal Information</string>
    <string name="editProf">Edit Profile</string>
    <string name="save">Save</string>
    <string name="param">Additional parameters</string>
    <string name="ageHint">Please fill in a number to determine the margin for age. (5 for example would mean 20 as minimum and 30 as maximum if you are 25)</string>
    <string name="topFitness">Top fitness schemes</string>
    <string name="topRunning">Top running schemes</string>
    <string name="createOwn">Create your own</string>
    <string name="title">Title</string>
    <string name="key">Keywords</string>
    <string name="createScheme">Create Scheme</string>
    <string name="categorie">Categorie</string>
    <string name="category">Category</string>
    <string name="editScheme">Edit Scheme</string>
    <string name="ownSchemes">Your schemes</string>
    <string name="userRequests">User Requests</string>
    <string name="ageRadius">Age Radius:</string>
    <string name="sameGender">Same Gender</string>
    <string name="name">Name</string>
    <string name="adress">Adress</string>
</resources>
