<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_specific_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mprog.nl.programmeerproject.SpecificUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menuLinearLayout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

    <TextView
        android:id="@+id/specUserFirstText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        />

    <TextView
        android:id="@+id/specUserLastText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:layout_below="@id/specUserFirstText"
        />

    <TextView
        android:id="@+id/specUserAgeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_below="@+id/specUserGenderText"
        />

    <TextView
        android:id="@+id/specUserGenderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_below="@id/specUserLastText"
        />

    <TextView
        android:id="@+id/specUserSportText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sport"
        android:layout_below="@id/specUserAgeText"
        />

    <TextView
        android:id="@+id/specUserLevelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:layout_below="@+id/specUserSportText"
        />

    <TextView
        android:id="@+id/specUserDescText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_below="@id/specUserLevelText"
        android:scrollHorizontally="false"
        />

    <Button
        android:id="@+id/specUserSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/searchAgain"
        />

    <Button
        android:id="@+id/specUserAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add"
        />

    </RelativeLayout>

    <include layout="@layout/bottom_buttons"></include>

</RelativeLayout>
