<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mprog.nl.programmeerproject.CreateProfileActivity">

    <TextView
        android:id="@+id/createProfNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameHint"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/createProfFirstEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:layout_below="@id/createProfNameText"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/createProfLastEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:layout_below="@id/createProfFirstEdit"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/createProfAdressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpHint"
        android:layout_below="@id/createProfLastEdit"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/createProfStreetEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street"
        android:layout_below="@id/createProfAdressText"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/createProfNumberEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:layout_below="@id/createProfStreetEdit"
        android:inputType="number"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/createProfCityEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_below="@id/createProfNumberEdit"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/createProfSportText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sportHint"
        android:layout_below="@id/createProfCityEdit"
        android:imeOptions="actionDone"
        android:padding="10dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@id/createProfSportText"
        >

        <Spinner
            android:id="@+id/createProfSportSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            />

        <Spinner
            android:id="@+id/createProfLevelSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            />

    </LinearLayout>

    <Button
        android:id="@+id/createProfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:text="@string/createProf"
        />

</RelativeLayout>
