<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mprog.nl.programmeerproject.Activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menuLinearLayout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/background_running_portrait"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainProfileLayout"
            android:padding="6dp"
            android:background="@color/colorTextBackFirst"
            >

    <TextView
        android:id="@+id/mainWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="32dp"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/mainFirstText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainWelcomeText"
        android:text="@string/firstName"
        />

    <TextView
        android:id="@+id/mainLastText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainFirstText"
        android:text="@string/lastName"
        />

    <TextView
        android:id="@+id/mainGenderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLastText"
        android:text="@string/gender"
        />

    <TextView
        android:id="@+id/mainAgeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainGenderText"
        android:text="@string/age"
        />

        <TextView
        android:id="@+id/mainStreetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainAgeText"
        android:text="@string/street"
        />

    <TextView
        android:id="@+id/mainNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainStreetText"
        android:text="@string/number"
        />

    <TextView
        android:id="@+id/mainCityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainNumberText"
        android:text="@string/city"
        />

    <TextView
        android:id="@+id/mainSportText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainCityText"
        android:text="@string/sport"
        />

    <TextView
        android:id="@+id/mainLevelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainSportText"
        android:text="@string/level"
        />

    <TextView
        android:id="@+id/mainDescText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLevelText"
        android:text="@string/desc"
        />

    <ImageButton
        android:id="@+id/mainLogOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/mainWelcomeText"
        android:src="@drawable/ic_power_settings_new_black_24dp"
        />

    <ImageButton
        android:id="@+id/mainEditProfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mainLogOutButton"
        android:src="@drawable/ic_create_black_24dp"
        android:visibility="invisible"
        />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mainListLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/mainProfileLayout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorTextBackSecond"
                android:padding="6dp"
                >

                <TextView
                    android:id="@+id/mainRequestText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/userRequests"
                    />

    <ListView
        android:id="@+id/mainRequestList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainRequestText"
        ></ListView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTextBackFirst"
                android:padding="6dp"
                >

                <TextView
                    android:id="@+id/mainOwnSchemeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ownSchemes"
                    />

                <ListView
                    android:id="@+id/mainOwnSchemeList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/mainOwnSchemeText"
                    ></ListView>

            </RelativeLayout>

    </LinearLayout>

    </RelativeLayout>

    <include layout="@layout/bottom_buttons"></include>

</RelativeLayout>
