<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuLinearLayout"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="0dp"
    >

    <Button
        android:id="@+id/homeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home"
        android:textColor="@color/white"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <Button
        android:id="@+id/findButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/find"
        android:textColor="@color/white"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/chats"
        android:textColor="@color/white"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <Button
        android:id="@+id/schemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/schemes"
        android:textColor="@color/white"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

</LinearLayout>