<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mprog.nl.programmeerproject.SchemeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menuLinearLayout"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/buttonLinearLayout"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

    <TextView
        android:id="@+id/schemeTopFitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topFitness"
        android:textSize="26sp"
        android:padding="10dp"
        />

    <ListView
        android:id="@+id/schemeTopFitList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/schemeTopFitText"
        >
    </ListView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

    <TextView
        android:id="@+id/schemeTopRunText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topRunning"
        android:textSize="26sp"
        android:padding="10dp"
        />

    <ListView
        android:id="@+id/schemeTopRunList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/schemeTopRunText"
        >
    </ListView>

    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

    <Button
        android:id="@+id/schemeSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_weight="1"
        android:text="@string/search"
        />

    <Button
        android:id="@+id/schemeCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_weight="1"
        android:text="@string/createOwn"
        />

    </LinearLayout>

    </RelativeLayout>

    <include layout="@layout/bottom_buttons"></include>

</RelativeLayout>
